adding modified.gitattributes file

--- a/Invisibility Scenario 1 Scene 1/.gitattributes
+++ b/Invisibility Scenario 1 Scene 1/.gitattributes
@@ -8,3 +8,24 @@
 *.fbx.meta filter=lfs diff=lfs merge=lfs -text
 *.mat.meta filter=lfs diff=lfs merge=lfs -text
 *.mat filter=lfs diff=lfs merge=lfs -text
+*.unitypackage filter=lfs diff=lfs merge=lfs -text
+*.cs filter=lfs diff=lfs merge=lfs -text
+*.unity filter=lfs diff=lfs merge=lfs -text
+*.png.meta filter=lfs diff=lfs merge=lfs -text
+*.cs.meta filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
+*.log filter=lfs diff=lfs merge=lfs -text
+*.asset filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
+*.cs.txt filter=lfs diff=lfs merge=lfs -text
+*.fragment.cs.txt filter=lfs diff=lfs merge=lfs -text
+*.uma filter=lfs diff=lfs merge=lfs -text
+*.asmref.meta filter=lfs diff=lfs merge=lfs -text
+*.asmref. filter=lfs diff=lfs merge=lfs -text
+*.meta. filter=lfs diff=lfs merge=lfs -text
+*cs.meta. filter=lfs diff=lfs merge=lfs -text
+*sample.json. filter=lfs diff=lfs merge=lfs -text
+*.png. filter=lfs diff=lfs merge=lfs -text
+*.prefs filter=lfs diff=lfs merge=lfs -text
+*.dwlt filter=lfs diff=lfs merge=lfs -text
+*.db filter=lfs diff=lfs merge=lfs -text
