--- a/Invisibility Scenario 1 Scene 1/Assets/UMA/Content/UMA_Content.asmdef
+++ b/Invisibility Scenario 1 Scene 1/Assets/UMA/Content/UMA_Content.asmdef
@@ -1,8 +1,3 @@
-{
-    "name": "UMA_Content",
-    "references": [
-        "UMA_Core"
-    ],
-    "includePlatforms": [],
-    "excludePlatforms": []
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:5e1b66fe91e34c45aa5f0ee928d5fd6fa4f4186967700566477dfaf95661b6bd
+size 138
