--- a/Invisibility Scenario 1 Scene 1/Assets/UMA/Editor/Addressable_Editor.asmdef
+++ b/Invisibility Scenario 1 Scene 1/Assets/UMA/Editor/Addressable_Editor.asmdef
@@ -1,19 +1,3 @@
-{
-    "name": "Addressable_Editor",
-    "references": [
-        "Unity.Addressables.Editor",
-        "Unity.ResourceManager",
-        ""
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:8828e4340572830ce64ecadd3248abe930726bc4181ee0a78305fca5194585d9
+size 452
