--- a/Invisibility Scenario 1 Scene 1/Assets/UMA/Examples/Editor/UMA_Examples_Editor.asmdef
+++ b/Invisibility Scenario 1 Scene 1/Assets/UMA/Examples/Editor/UMA_Examples_Editor.asmdef
@@ -1,10 +1,3 @@
-{
-    "name": "UMA_Examples_Editor",
-    "references": [
-        "UMA_Examples"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
-    "excludePlatforms": []
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:413175b6459e0fe3aa90ed0c7e17ab1a5a7efb1ee72472680b54e5e0ed5c6e8a
+size 174
