--- a/Invisibility Scenario 1 Scene 1/Assets/UMA/Examples/UMA_Examples.asmdef
+++ b/Invisibility Scenario 1 Scene 1/Assets/UMA/Examples/UMA_Examples.asmdef
@@ -1,17 +1,3 @@
-{
-    "name": "UMA_Examples",
-    "references": [
-        "UMA_Core",
-        "Unity.Addressables",
-        "Unity.ResourceManager"
-    ],
-    "includePlatforms": [],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:8d0d3fa41a017152065a0acde4cbbe9250d40764a6b4703c70d4d736173302f5
+size 423
